<resources>

    <string name="app_name">SerialPortTest</string>
	<string name="Setup">Set serial</string>
	<string name="SpkTest">PTT test</string>
	<string name="Quit">Quit</string>
	
	<string name="error_configuration">Please configure your serial port first.</string>
	<string name="error_security">You do not have read/write permission to the serial port.</string>
	<string name="error_unknown">The serial port can not be opened for an unknown reason.</string>

	<string name="Test">fireware version</string>
	<string name="SetGroup">hardware model</string>
	<string name="Volume">Set 1111</string>
	<string name="Trsmit">Set 2222</string>
	<string name="Receive">Set 3333</string>

</resources>
