<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >
   <EditText
        android:id="@+id/EditTextReceive"
        android:layout_width="fill_parent"
        android:layout_height="60dip"
		android:editable="false"
		android:focusable="false"
        android:focusableInTouchMode="false" 
        android:hint="ReceiveText"
        android:isScrollContainer="true"
        android:scrollbarStyle="insideOverlay"
    />
	<Button 
		android:id="@+id/TestBtn"
		android:text="@string/Test" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/EditTextReceive"
	/>

	<Button 
		android:id="@+id/SetGroup"
		android:text="@string/SetGroup" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/TestBtn"
	/>

	<Button 
		android:id="@+id/Volume"
		android:text="@string/Volume" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/SetGroup"
	/>

	<Button 
		android:id="@+id/Trsmit"
		android:text="@string/Trsmit" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/Volume"
	/>

	<Button 
		android:id="@+id/Receive"
		android:text="@string/Receive" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content" 
		android:layout_below="@+id/Trsmit"
	/>

</RelativeLayout>
