<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

	<Button
		android:id="@+id/ButtonSetup"
		android:text="@string/Setup"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	/>
	<Button
		android:id="@+id/ButtonTest"
		android:text="@string/SpkTest"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/ButtonSetup" 
	/>
	<Button
		android:id="@+id/ButtonQuit"
		android:text="@string/Quit"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@+id/ButtonTest"
	/>
</RelativeLayout>
